[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/pythonscript_install_manager/manage.gd" type="Script" id=1]

[node name="manage" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 352.0
margin_top = 180.0
margin_right = -352.0
margin_bottom = -180.0
rect_min_size = Vector2( 320, 240 )
window_title = "Manage Python Install"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_right = 150.0
margin_bottom = 234.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="container"]
margin_right = 300.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="install_manager_version" type="HBoxContainer" parent="container"]
margin_top = 14.0
margin_right = 300.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="container/install_manager_version"]
margin_top = 8.0
margin_right = 160.0
margin_bottom = 22.0
rect_min_size = Vector2( 160, 0 )
text = "Install Manager version:"

[node name="HSplitContainer" type="HSplitContainer" parent="container/install_manager_version"]
margin_left = 164.0
margin_right = 164.0
margin_bottom = 30.0
split_offset = 200

[node name="value" type="Label" parent="container/install_manager_version"]
margin_left = 168.0
margin_top = 8.0
margin_right = 258.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Not installed !"

[node name="pythonscript_version" type="HBoxContainer" parent="container"]
margin_top = 48.0
margin_right = 300.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="container/pythonscript_version"]
margin_top = 8.0
margin_right = 160.0
margin_bottom = 22.0
rect_min_size = Vector2( 160, 0 )
text = "Pythonscript version:"

[node name="HSplitContainer" type="HSplitContainer" parent="container/pythonscript_version"]
margin_left = 164.0
margin_right = 164.0
margin_bottom = 30.0

[node name="value" type="Label" parent="container/pythonscript_version"]
margin_left = 168.0
margin_top = 8.0
margin_right = 258.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Not installed !"

[node name="VSplitContainer2" type="VSplitContainer" parent="container"]
margin_top = 82.0
margin_right = 300.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 10 )

[node name="retreive_latests_version_task_container" type="VBoxContainer" parent="container"]
visible = false
margin_top = 96.0
margin_right = 300.0
margin_bottom = 132.0

[node name="label" type="Label" parent="container/retreive_latests_version_task_container"]
margin_right = 300.0
margin_bottom = 14.0
text = "Looking for updates..."
align = 1

[node name="VSplitContainer" type="VSplitContainer" parent="container/retreive_latests_version_task_container"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 18.0

[node name="progress_bar" type="ProgressBar" parent="container/retreive_latests_version_task_container"]
margin_top = 22.0
margin_right = 300.0
margin_bottom = 36.0
value = 100.0

[node name="VSplitContainer3" type="VSplitContainer" parent="container"]
margin_top = 96.0
margin_right = 300.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 10 )

[node name="display_error_label" type="TextEdit" parent="container"]
margin_top = 110.0
margin_right = 300.0
margin_bottom = 210.0
rect_min_size = Vector2( 300, 100 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Error: Error while looking for install manager updates:
Bad response from https://api.github.com/repos/touilleMan/godot-python-install-manager/releases (status code: 403)
Error: Error while looking for pythonscript updates:
Bad response from https://api.github.com/repos/touilleMan/godot-python/releases (status code: 403)
"
readonly = true

[node name="upgrade_button" type="Button" parent="container"]
visible = false
margin_top = 110.0
margin_right = 333.0
margin_bottom = 130.0
text = "upgrade"

[node name="upgrade_task_container" type="VBoxContainer" parent="container"]
visible = false
margin_top = 134.0
margin_right = 333.0
margin_bottom = 166.0

[node name="label" type="Label" parent="container/upgrade_task_container"]
margin_right = 333.0
margin_bottom = 14.0

[node name="progress_bar" type="ProgressBar" parent="container/upgrade_task_container"]
margin_top = 18.0
margin_right = 333.0
margin_bottom = 32.0
[connection signal="about_to_show" from="." to="." method="_on_manage_about_to_show"]
[connection signal="pressed" from="container/upgrade_button" to="." method="_on_upgrade_button_pressed"]
